# hw04-group26

./: .buildinfo  LOSC_Event_tutorial.html  LOSC_Event_tutorial.ipynb  Makefile  README.html  README.md  _config.yml  conf.py  contribution_statement.html  contribution_statement.md  genindex.html  hw04_description.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js  setup.cfg
.doctrees/: environment.pickle  hw04_description.doctree  markdown-notebooks.doctree
_build/html/: .buildinfo  genindex.html  hw04_description.html  notebooks.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: LOSC_Event_tutorial.doctree  contribution_statement.doctree  intro.doctree  markdown.doctree  notebooks.doctree
_build/jupyter_execute/: LOSC_Event_tutorial.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
_sources/: LOSC_Event_tutorial.ipynb  README.md  contribution_statement.md  markdown-notebooks.ipynb
ligotools/: tests_readligo.py  utils.py
ligotools/tests/: test_readligo.py  test_utils.py  tests_readligo.py  tests_utils.py
