[metadata]
name             = ligotools
version          = attr: mytoy.__version__
author           = Ligo Scientific Collaboration (LSC) and Stat 159 Group 26: Carrie Hu, Yiran Li, Angelo Punzalan, Oona Risse-Adams
author_email     = yiran.li@berkeley.edu, carrie.hu@berkeley.edu, apunzalan@berkeley.edu, oonarisseadams@berkeley.edu
description      = Homework 4 setup.cfg file to help with the LSC package.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, toys
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
# These should be consistent with what is specified in the environment.yml
python_requires  = >= 3.8,
install_requires =
    python=3.8
    numpy=1.23
    h5py=3.7
    matplotlib=3.5
    ipython=8.2
    ipykernel=5.5
    decorator=5.1
    scipy=1.8

[options.packages.find]
exclude =
    examples*
    docs*